--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,12 @@
-@import "tw-animate-css";
-@import "tailwindcss";
+@import 'tw-animate-css';
+@import 'tailwindcss';
 
 @theme inline {
   /* Configure your theme variables here */
-  --font-display: "Inter", "sans-serif";
+  --font-display: 'Inter', 'sans-serif';
   --color-primary-500: oklch(0.84 0.18 117.33);
   --spacing: 0.25rem;
 }
-
 
 :root {
   --background: oklch(1 0 0);
